--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: install prerequisites
       shell: pwsh
-      run: conda install clingo clingo-dl clingcon mypy pylint
+      run: conda install clingo clingo-dl clingcon mypy pylint coverage
 
     - name: info
       shell: pwsh
@@ -42,3 +42,5 @@ jobs:
         python -m unittest discover -v
         mypy -p clingox
         pylint clingox
+        coverage run -m unittest discover -v
+        coverage report --fail-under=100
