no change but now it seems to work

--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -40,7 +40,8 @@ conda:
       build:
         noarch: python
         script:
-          - python setup.py install --single-version-externally-managed --record record.txt
+          - 'ls -al'
+          - 'python setup.py install --single-version-externally-managed --record record.txt'
       about:
         home: https://potassco.org/
         license: MIT
