--- a/.github/conda/meta.yaml
+++ b/.github/conda/meta.yaml
@@ -24,8 +24,9 @@ requirements:
 build:
   number: {{ build }}
   noarch: python
-  script: ['python setup.py install --single-version-externally-managed --record record.txt']
-
+  script: 
+    - 'ls -al'
+    - 'python setup.py install --single-version-externally-managed --record record.txt'
 
 about:
   home: https://potassco.org/
