--- a/.github/conda/meta.yaml
+++ b/.github/conda/meta.yaml
@@ -9,13 +9,12 @@ package:
   version: {{ version }}
 
 source:
-  git_rev: {{ revision }}
-  git_url: https://github.com/potassco/{{ name }}.git
+  path: ../..
 
 requirements:
-  build:
-  - setuptools
+  host:
   - python >=3.5
+  - pip
   - clingo >=5.5.0
   run:
   - python >=3.5
@@ -24,9 +23,8 @@ requirements:
 build:
   number: {{ build }}
   noarch: python
-  script: 
-    - 'ls -al'
-    - 'python setup.py install --single-version-externally-managed --record record.txt'
+  script: python -m pip install --no-deps --ignore-installed .
+
 
 about:
   home: https://potassco.org/
