--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -30,18 +30,16 @@ conda:
       url: https://github.com/potassco/{{ name }}/archive/v{{ version }}.tar.gz
       git_url: https://github.com/potassco/{{ name }}.git
       requirements:
-        build:
-          - setuptools
+        host:
           - python >=3.5
+          - pip
           - clingo >=5.5.0
         run:
           - python >=3.5
           - clingo >=5.5.0
       build:
         noarch: python
-        script:
-          - 'ls -al'
-          - 'python setup.py install --single-version-externally-managed --record record.txt'
+        script: 'python -m pip install --no-deps --ignore-installed .'
       about:
         home: https://potassco.org/
         license: MIT
