--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -2,7 +2,12 @@
 pip:
     pure: True
     version: |
-        version = '1.0.0'
+        version = None
+        with open('setup.py') as fh:
+            for line in fh:
+                m = match(r'''[ ]*version[ ]*=[ ]*['"]([0-9]+\.[0-9]+\.[0-9]+)(\.post[0-9]+)?['"]''', line)
+                if m is not None:
+                    version = m.group(1)
     build_depends_release: |
         python3 -m pip install --user clingo
     build_depends_dev: |
@@ -62,7 +67,7 @@ ppa:
     source_url:
         'https://github.com/potassco/python-clingox'
     version:
-        '1.0.0'
+        $(sed -n "/version[ ]*=/s/.*['\"]\([0-9]\+\.[0-9]\+\.[0-9]\+.*\)['\"].*/\1/p" ../../setup.py)
     build_depends:
         - 'dh-python'
         - 'python3-all'
