--- a/.github/workflows/pipsource.yml
+++ b/.github/workflows/pipsource.yml
@@ -6,7 +6,7 @@ on:
       wip:
         description: 'Publish work in progress package.'
         required: false
-        default: true
+        default: 'true'
 
 jobs:
   build_packages:
@@ -20,12 +20,12 @@ jobs:
         python3 -m pip install --user --upgrade setuptools wheel
 
     - name: Install prerequisites (wip)
-      if: ${{ github.event.inputs.wip }}
+      if: ${{ github.event.inputs.wip == 'true' }}
       run: |
         python3 -m pip install --user --extra-index-url https://test.pypi.org/simple/ clingo-cffi
 
     - name: Install prerequisites (release)
-      if: ${{ !github.event.inputs.wip }}
+      if: ${{ github.event.inputs.wip == 'false' }}
       run: |
         python3 -m pip install --user clingo
 
@@ -35,11 +35,11 @@ jobs:
         submodules: recursive
 
     - name: Build source package (wip)
-      if: ${{ github.event.inputs.wip }}
+      if: ${{ github.event.inputs.wip == 'true' }}
       run: python3 .github/pipsource.py
 
     - name: Publish package to TestPyPI (wip)
-      if: ${{ github.event.inputs.wip }}
+      if: ${{ github.event.inputs.wip == 'true' }}
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
@@ -48,11 +48,11 @@ jobs:
         repository_url: https://test.pypi.org/legacy/
 
     - name: Build source package (release)
-      if: ${{ !github.event.inputs.wip }}
+      if: ${{ github.event.inputs.wip == 'false' }}
       run: python3 .github/pipsource.py --release
 
     - name: Publish package to TestPyPI (release)
-      if: ${{ !github.event.inputs.wip }}
+      if: ${{ github.event.inputs.wip == 'false'}}
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
