--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,15 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        python-version: ['3.7']
+        python-version: ['3.6', '3.9']
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
 
     - name: install prerequisites
       shell: pwsh
