--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,20 +27,31 @@ jobs:
       run: pip install --extra-index-url https://test.pypi.org/simple/ clingo clingo-dl clingcon flake8 mypy pylint coverage --upgrade
 
     - name: install dataclases
-      shell: pwsh
       if: ${{ matrix.python-version == '3.6' }}
+      shell: pwsh
       run: pip install dataclasses types-dataclasses
 
     - name: info
       shell: pwsh
-      run: |
-        python -VV
+      run: python -VV
 
     - name: test
       shell: pwsh
-      run: |
-        coverage run -m unittest discover -v
-        mypy -p clingox
-        pylint clingox
-        flake8
-        coverage report --fail-under=100
+      run: coverage run -m unittest discover -v
+
+    - name: type check
+      if: ${{ matrix.python-version != '3.6' }}
+      shell: pwsh
+      run: mypy -p clingox
+
+    - name: lint (pylint)
+      shell: pwsh
+      run: pylint clingox
+
+    - name: lint (flake8)
+      shell: pwsh
+      run: flake8
+
+    - name: coverage
+      shell: pwsh
+      run: coverage report --fail-under=100
