--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,34 +12,41 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        python-version: ['3.7']
+        python-version: ['3.6', '3.9']
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: setup miniconda
-      uses: conda-incubator/setup-miniconda@v2
+    - name: Set up Python
+      uses: actions/setup-python@v3
       with:
-        auto-update-conda: true
         python-version: ${{ matrix.python-version }}
-        activate-environment: clingox
-        channels: potassco/label/dev,conda-forge
 
     - name: install prerequisites
       shell: pwsh
-      run: conda install clingo clingo-dl clingcon mypy pylint coverage
+      run: pip install -r .github/requirements.txt
 
     - name: info
       shell: pwsh
-      run: |
-        conda info
-        conda list
-        python -VV
+      run: python -VV
 
     - name: test
       shell: pwsh
-      run: |
-        coverage run -m unittest discover -v
-        mypy -p clingox
-        pylint clingox
-        coverage report --fail-under=100
+      run: coverage run -m unittest discover -v
+
+    - name: type check
+      shell: pwsh
+      run: mypy -p clingox
+
+    - name: lint (pylint)
+      if: ${{ matrix.python-version != '3.6' }}
+      shell: pwsh
+      run: pylint clingox
+
+    - name: lint (flake8)
+      shell: pwsh
+      run: flake8
+
+    - name: coverage
+      shell: pwsh
+      run: coverage report --fail-under=100
