configuring black with pre-commit on github actions

--- a/.github/requirements-stable.txt
+++ b/.github/requirements-stable.txt
@@ -7,4 +7,5 @@ pylint
 coverage
 dataclasses; python_version < '3.7'
 types-dataclasses; python_version < '3.7'
+pre-commit==2.19.0
 --extra-index-url https://test.pypi.org/simple/
