--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,51 +4,29 @@ on:
   - push
   - pull_request
 
+env:
+  FORCE_COLOR: "3"
+
 jobs:
   build:
-    name: clingox using python ${{ matrix.python-version }} on ${{ matrix.os }} installing ${{ matrix.requirements }}
+    name: clingox on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
-        python-version: ['3.6', '3.9']
-        requirements: ['requirements.txt', 'requirements-stable.txt']
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.6
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
 
-    - name: install prerequisites
-      shell: pwsh
-      run: pip install -r .github/${{ matrix.requirements }}
+    - name: install nox
+      run: python -m pip install nox
 
-    - name: info
-      shell: pwsh
-      run: python -VV
-
-    - name: test
-      shell: pwsh
-      run: coverage run -m unittest discover -v
-
-    - name: type check
-      shell: pwsh
-      run: mypy -p clingox
-
-    - name: lint (pylint)
-      if: ${{ matrix.python-version != '3.6' }}
-      shell: pwsh
-      run: pylint clingox
-
-    - name: lint (flake8)
-      shell: pwsh
-      run: flake8
-
-    - name: coverage
-      if: ${{ matrix.requirements != 'requirements-stable.txt' }}
-      shell: pwsh
-      run: coverage report --fail-under=100
+    - name: run tests
+      run: nox
