deploy packages for Ubuntu 22.04

--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -78,6 +78,7 @@ ppa:
         - 'README.md'
         - 'LICENSE'
     distributions:
+        jammy:
         focal:
         bionic:
             source:
