--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,13 @@ repos:
     - id: end-of-file-fixer
     - id: trailing-whitespace
       exclude: ^.github/
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        exclude: ^.github/
+
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
