--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
 repos:
+  - repo: https://github.com/myint/autoflake
+    rev: v1.4
+    hooks:
+    - id: autoflake
+      args: ["--in-place",  "--imports=clingo,clingox", "--ignore-init-module-imports", "--remove-unused-variables"]
+      exclude: ^.github/
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
@@ -10,6 +16,7 @@ repos:
     rev: 5.10.1
     hooks:
       - id: isort
+        args: ["--profile", "black"]
         exclude: ^.github/
 
   - repo: https://github.com/psf/black
