--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: "setup python 3.6"
-      if: ${{ matrix.on != 'ubuntu-latest' }}
+      if: ${{ matrix.os != 'ubuntu-latest' }}
       uses: actions/setup-python@v4
       with:
         python-version: 3.6
