--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,11 @@ jobs:
       with:
         python-version: 3.6
 
+    - name: "setup python 3.7"
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.7
+
     - name: "setup python 3.11"
       uses: actions/setup-python@v4
       with:
