--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,14 +17,25 @@ jobs:
         os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - name: "checkout repository"
+      uses: actions/checkout@v3
+
+    - name: "setup python 3.6"
+      if: ${{ matrix.os != 'ubuntu-latest' }}
+      uses: actions/setup-python@v4
       with:
         python-version: 3.6
-    - uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
 
+    - name: "setup python 3.7"
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.7
+
+    - name: "setup python 3.11"
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+  
     - name: install nox
       run: python -m pip install nox
 
